# business_control_management

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-09-03_create_user_table.py  2024-09-03_initial_migration.py  2024-09-08_create_account_table.py  2024-09-08_create_invite_table.py  2024_09_12_1200-aa92a9add66a_create_company_table.py  2024_09_12_1200-fda9e68a7be7_create_user_table.py  2024_09_12_1201-bbe1d626b41d_update_account_table.py
auth/: utils.py
src/: __main__.py  config.py  main.py  metadata.py
src/api/v1/routers/: auth_utils.py  department.py  registry.py  user.py
src/databases/: database.py
src/models/: account.py  base.py  company.py  invite.py  user.py
src/models/department/: department.py  employee.py  postion.py
src/repositories/: account.py  company.py  department.py  employee.py  invite.py  position.py  user.py
src/schemas/: account.py  base_response.py  company.py  invite.py  schemas.py  sign_up.py  token.py  user.py
src/schemas/department/: department.py  employee.py  leader.py  position.py
src/services/: account.py  company.py  department.py  employee.py  position.py  user.py
src/utils/: generate_invite_code.py  hash_password.py  repository.py  send_invite_code_to_mail.py  token_create.py  unit_of_work.py
src/utils/auth/: admin.py  auth_utils.py
